# ccp-course-autumn-2022

./: README.md
Module_1/: .gitignore  Module_1.code-workspace
Module_1/T1-first_task/: CMakeLists.txt  Readme.md
Module_1/T1-first_task/src/: main.c
Module_2/: Module_2.code-workspace
Module_2/T1-first_touch/src/: first.cpp
Module_2/T2-rectangle/src/: rectangle.cpp
Module_2/T3-simple_class/src/: main.cpp  person.cpp  person.hpp
Module_2/T4-dog_class/src/: dog_class.cpp  dog_class.hpp
Module_2/T5-bank_account/src/: bank_account.cpp  bank_account.hpp
Module_2/T6-vector/: .gitignore
Module_2/T6-vector/src/: vector.cpp
Module_2/T7-vector_strings/src/: vector_strings.cpp
Module_3/: Module_3.code-workspace
Module_3/T1-vector_iterators/: CMakeLists.txt  Readme.md
Module_3/T1-vector_iterators/src/: vector_it.cpp  vector_it.hpp
Module_3/T2-list/: CMakeLists.txt  Readme.md
Module_3/T2-list/src/: list.cpp  list.hpp  main.cpp
Module_3/T3-matrix/: CMakeLists.txt  Readme.md
Module_3/T3-matrix/src/: main.cpp  matrix.cpp  matrix.hpp
Module_3/T4-library/: CMakeLists.txt  Readme.md
Module_3/T4-library/src/: book.cpp  book.hpp  customer.cpp  customer.hpp  library.cpp  library.hpp  main.cpp
Module_3/T5-pokemon/: CMakeLists.txt
Module_3/T5-pokemon/src/: pokemon.cpp  pokemon.hpp
Module_4/: CMakeLists.txt  Module_4.code-workspace
Module_4/T1-mammals/: CMakeLists.txt  Readme.md
Module_4/T1-mammals/src/: cat.cpp  cat.hpp  dog.cpp  dog.hpp  mammal.hpp
Module_4/T2-trolls_and_dragons/: CMakeLists.txt  Readme.md
Module_4/T2-trolls_and_dragons/src/: creature.cpp  creature.hpp  dragon.cpp  dragon.hpp  troll.cpp  troll.hpp
Module_4/T3-overload_operators/: CMakeLists.txt  Readme.md
Module_4/T3-overload_operators/src/: geomvector.cpp  geomvector.hpp
Module_4/T4-bird/: CMakeLists.txt  Readme.md
Module_4/T4-bird/src/: aviary.cpp  aviary.hpp  bird.hpp  duck.hpp  owl.hpp
Module_4/T5-dragons/: CMakeLists.txt  Readme.md
Module_4/T5-dragons/src/: dragon.cpp  dragon.hpp  dragon_cave.cpp  dragon_cave.hpp  fantasy_dragon.cpp  fantasy_dragon.hpp  magic_dragon.cpp  magic_dragon.hpp  main.cpp
Module_5/: CMakeLists.txt  Module_5.code-workspace
Module_5/T1-register/: CMakeLists.txt  readtester.txt  test2.txt
Module_5/T1-register/src/: aircraft.cpp  boat.cpp  boat.hpp  main.cpp  register.cpp  register.hpp  vehicle.cpp  vehicle.hpp
Module_5/T2-polynomial/: CMakeLists.txt
Module_5/T2-polynomial/src/: main.cpp  poly.cpp  poly.hpp
Module_5/T3-to_string/: CMakeLists.txt
Module_5/T3-to_string/src/: main.cpp  to_string.hpp
Module_5/T4-restr_ptr/: CMakeLists.txt
Module_5/T4-restr_ptr/src/: car.hpp  main.cpp  restricted_ptr.hpp  restricted_ref_counter.hpp
